# mongodb-with-fastapi

./: .env  README.md  main.py  pyproject.toml
