[project]
name = "data"
version = "0.1.0"
description = ""
authors = [
    {name = "Mian Hassam",email = "yourgithubemail@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "pymongo (>=4.17.0,<5.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
